[workspace]
resolver = "2"
members = [ "examples/interrmitent-failure", "examples/url-fetcher",
    "poolparty",
]

[workspace.dependencies]
tracing = { version = "0.1.40", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3.18" }
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.10.0", default-features = false }
thiserror = { version = "1.0.63", default-features = false } 

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
struct_excessive_bools = "allow"
trivially_copy_pass_by_ref = "allow"
must_use_candidate = "allow"
match_bool = "allow"
module_name_repetitions = "allow"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
unused_crate_dependencies = "warn"
meta_variable_misuse = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
