[package]
name = "url-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "ansi", "env-filter"] }

poolparty = { path = "../../poolparty/" }
reqwest = "0.12.5"
anyhow = "1.0.86"
ratatui = "0.28.0"
